tests/test_typing/bad/err4.catala_en
> Include: common.catala_en

```catala
scope S:
  definition z equals [ Int content x ]
  definition a equals number of (z ++ z) / 2
```

Should be "catala Typecheck", see test err3

```catala-test-inline
$ catala ocaml
[WARNING] The structure "Structure" is never used; maybe it's unnecessary?

┌─⯈ tests/test_typing/bad/common.catala_en:7.23-7.32:
└─┐
7 │ declaration structure Structure:
  │                       ‾‾‾‾‾‾‾‾‾
[WARNING] The constructor "Dec" of enumeration "Enum" is never used; maybe it's unnecessary?

┌─⯈ tests/test_typing/bad/common.catala_en:4.6-4.9:
└─┐
4 │   -- Dec content decimal
  │      ‾‾‾
[WARNING] The constructor "Dat" of enumeration "Enum" is never used; maybe it's unnecessary?

┌─⯈ tests/test_typing/bad/common.catala_en:5.6-5.9:
└─┐
5 │   -- Dat content date
  │      ‾‾‾
[ERROR]
Error during typechecking, incompatible types:
┌─⯈ Enum
└─⯈ Structure

Error coming from typechecking the following expression:
┌─⯈ tests/test_typing/bad/err4.catala_en:5.25-5.38:
└─┐
5 │   definition z equals [ Int content x ]
  │                         ‾‾‾‾‾‾‾‾‾‾‾‾‾

Type Enum coming from expression:
┌─⯈ tests/test_typing/bad/err4.catala_en:5.25-5.38:
└─┐
5 │   definition z equals [ Int content x ]
  │                         ‾‾‾‾‾‾‾‾‾‾‾‾‾

Type Structure coming from expression:
┌─⯈ tests/test_typing/bad/common.catala_en:14.31-14.40:
└──┐
14 │   output z content collection Structure
   │                               ‾‾‾‾‾‾‾‾‾
#return code 123#
```
